# unreal-blueprint-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md
plugin/BlueprintMCP/: BlueprintMCP.uplugin  README.md
plugin/BlueprintMCP/Source/BlueprintMCP/: BlueprintMCP.Build.cs
plugin/BlueprintMCP/Source/BlueprintMCP/Private/: BlueprintMCPModule.cpp  BlueprintMCPRunCommandlet.cpp  TCPServer.cpp  TCPServer.h
plugin/BlueprintMCP/Source/BlueprintMCP/Public/: BlueprintMCPModule.h  BlueprintMCPRunCommandlet.h
scripts/: README.md  run_headless_ci.sh  run_integration_tests.sh
server/: README.md  pyproject.toml
server/tests/: conftest.py  test_server.py
server/unreal_blueprint_mcp/: __init__.py  server.py
