[project]
name = "unreal-blueprint-mcp"
version = "0.0.1"
description = "MCP server for editing Unreal Engine Blueprints via natural language"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [{ name = "Hal Xu" }]
keywords = ["mcp", "unreal-engine", "llm", "blueprint", "claude"]
dependencies = [
    "mcp[cli]>=1.27.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
unreal-blueprint-mcp = "unreal_blueprint_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unreal_blueprint_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
